# CppPythonIntegrationBoilerplate

./: CMakeLists.txt  PythonIntegration.cc.in  PythonIntegration.h  stupid.py
